vlib/v/checker/tests/unknown_comptime_expr.vv
fn unknown_at_ct() int { return 0 }

fn main() {
	mut foo := 0
	$if foo == 0 {}

	bar := unknown_at_ct()
	$if bar == 0 {}
}

fn if_is() {
	s := S1{}
	$if huh.typ is T {}
	$if s is int {}
	$if s.i is 5 {}
	$if s.i is T {}
}

struct S1 {
	i int
}

